# track

./: CMakeLists.txt  flash.jlink  setup_env.sh  start_env.sh  tasks.py
lib/: sim7600.h
src/: main.c  sim7600.c
